[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[project]
name = "adventuretime"
dynamic = "version"
dependencies = [ "adventurelib" ]
requires-python = ">=3.12"
authors = [ {name = "Laura Shemilt", email = "lashemilt@gmail.com"}]
description = "Text based escape room"
readme  = {file = "README.md"}

[project.scripts]
adventuretime-cli = "src:main"

